# arduino-cli-client

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: client.rs  list_boards.rs
examples/hello/: hello.ino
src/: lib.rs
