[package]
name = "arduino-cli-client"
description = "gRPC client for arduino cli"
version = "0.1.1"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
homepage = "https://github.com/marcelbuesing/arduino-cli-client"
repository = "https://github.com/marcelbuesing/arduino-cli-client.git"
keywords = ["arduino", "arduino-cli", "arduino-grpc"]
# License terms inherited from `arduino/arduino-cli`
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"

[build-dependencies]
tonic-build = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
